samples/_failures_safe/1761790650_11bf5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_444a7ffe.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_444a7ffe.c:164:5: error: expected declaration or statement at end of input
  164 |     };
      |     ^
